--- a/mini/Dockerfile
+++ b/mini/Dockerfile
@@ -1,7 +1,7 @@
 FROM simonmandlik/julia-custom:latest
 
 LABEL maintainer="simon.mandlik@gmail.com"
-ARG REPO=https://github.com/pevnak/Mini.jl.git
+ARG REPO=git://github.com/pevnak/Mini.jl.git
 ARG REPO_NAME=Mini.jl
 ARG S3=/s3
 ARG S3_BUCKET=hobbiton-eu-west-1-nn
@@ -12,15 +12,16 @@ ENV S3=$S3
 ENV S3_BUCKET=$S3_BUCKET
 RUN mkdir $S3
 
-RUN git clone $REPO && cd $REPO_NAME
+RUN mkdir /root/$REPO_NAME
+COPY $REPO_NAME/ /root/$REPO_NAME
 WORKDIR /root/$REPO_NAME
 
 # COPY juliarc.jl .juliarc.jl
 # COPY init.jl .
 
-RUN julia --depwarn=no -e "Pkg.activate(\"/root\"); Pkg.instantiate()"
+# RUN julia --depwarn=no -e "Pkg.activate(\"/root\"); Pkg.instantiate()"
 
 # ENV JULIA_NUM_THREADS=t
 
-ENTRYPOINT s3fs $S3_BUCKET $S3 -o use_cache=/tmp -o iam_role=NN-EC2-Worker -o umask=002 -o use_sse=kmsid:'KMSID'
+ENTRYPOINT s3fs $S3_BUCKET $S3 -o use_cache=/tmp -o iam_role=NN-EC2-Worker -o umask=002 -o use_sse=kmsid:'KMSID' \
 			&& tmux
