--- a/julia-custom/Dockerfile
+++ b/julia-custom/Dockerfile
@@ -6,41 +6,45 @@ ARG VERSION=0.6.4
 ARG DEBIAN_FRONTEND=noninteractive
 
 # install dependencies
-RUN apt-get -y clean && apt-get -y update &&     \
-    apt-get -y install --no-install-recommends   \
-	apt-utils																		   \
-	automake																		   \
-	autotools-dev																   \
-	build-essential															   \
-	bzip2																				   \
-	ca-certificates															   \
-	cmake																				   \
-	curl																				   \
-	fuse																				   \
-	g++																					   \
-	gcc																					   \
-	gfortran																		   \
-	git																					   \
-	hdf5-tools																	   \
-	htop																				   \
-	libatomic1																	   \
-	libcurl4-openssl-dev												   \
-	libfuse-dev																	   \
-	libssl-dev																	   \
-	libxml2-dev 																   \
-	m4																					   \
-	make																				   \
-	perl																				   \
-	pkg-config																	   \
-	python																			   \
-	python2.7-dev																   \
-	python3-dev																	   \
-	s3fs																				   \
-	tmux																				   \
-	unzip																				   \
-	wget																				   \
-	zlib1g-dev																	   \
-&& apt-get -y autoremove												 \
+RUN apt-get -y clean && apt-get -y update && \
+    apt-get -y install --no-install-recommends \
+	apt-utils \
+	automake \
+	autotools-dev \
+	build-essential \
+	bzip2 \
+	ca-certificates \
+	cmake \
+	curl \
+	fuse \
+	g++ \
+	gcc \
+	gfortran \
+	git \
+	hdf5-tools \
+	htop \
+	libatomic1 \
+	libcurl4-openssl-dev \
+	libfuse-dev \
+	libssl-dev \
+	libxml2-dev \
+	m4 \
+	make \
+    pdf2svg \
+	perl \
+	pkg-config \
+    poppler-utils \
+	python \
+	python2.7-dev \
+	python3-dev \
+	s3fs \
+    sudo \
+    texlive-latex-base \
+	tmux \
+	unzip \
+	wget \
+	zlib1g-dev \
+&& apt-get -y autoremove \
 && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /opt
@@ -60,7 +64,15 @@ WORKDIR /opt
 # download compiled julia
 RUN curl "https://julialang-s3.julialang.org/bin/linux/x64/0.6/julia-$VERSION-linux-x86_64.tar.gz" -o julia.tar.gz
 RUN tar -xf julia.tar.gz && rm julia.tar.gz
-RUN ln -s /opt/julia-$VERSION/bin/julia /usr/local/bin/julia
+RUN ln -s /opt/julia-9d11f62bcb/bin/julia /usr/local/bin/julia
+
+# install dependencies
+RUN julia -e 'packages = ["Revise", "Flux", "BSON", "Adapt", "MLBase", "Hiccup", "PGFPlotsX", "Conda", "DataStructures", "Query", "MLDataPattern", "PyPlot", "Plots", "GraphPlot", "CSV", "DataFrames", "Gadfly", "Compose", "JLD", "Requests", "TranscodingStreams", "XMLDict", "Retry", "StatsBase", "LearnBase", "FileIO"]; \
+Pkg.add.(packages); \
+Pkg.clone("https://github.com/pevnak/Mill.jl"); \
+Pkg.clone("https://github.com/pevnak/FluxExtensions.jl"); \
+Pkg.update(); \
+Pkg.build();'
 
 # build s3fs
 RUN git clone https://github.com/s3fs-fuse/s3fs-fuse.git
