--- a/mini/Dockerfile
+++ b/mini/Dockerfile
@@ -2,7 +2,8 @@ FROM simonmandlik/julia-custom:latest
 
 LABEL maintainer="simon.mandlik@gmail.com"
 
-ARG S3_URL=hobbiton-eu-west-1-nn
+# directory in which the file with data folder will be present
+ARG S3_URL="hobbiton-eu-west-1-nn"
 
 # mounted S3 location
 ENV S3=/root/s3
@@ -11,13 +12,11 @@ RUN mkdir $S3
 
 # copy code, model, settings and norm_consts
 COPY data/* /root/
-
-# copy model and norm_consts
+RUN mv credentials ~/.passwd-s3fs
+RUN chmod 600 ~/.passwd-s3fs
 
 WORKDIR /src
 
 COPY entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
 ENTRYPOINT ["/entrypoint.sh"]
-
-# CMD ["/bin/bash", "-c", "julia -p $p init.sh"]]
