--- a/mini/Dockerfile
+++ b/mini/Dockerfile
@@ -3,19 +3,23 @@ FROM simonmandlik/julia-custom:latest
 LABEL maintainer="simon.mandlik@gmail.com"
 
 # directory in which the file with data folder will be present
-ARG S3_URL="hobbiton-eu-west-1-nn"
+ARG bucket="hobbiton-eu-west-1-nn"
+ARG bucket_path="docker_test/"
 
 # mounted S3 location
 ENV S3=/root/s3
-ENV S3_URL=$S3_URL
 RUN mkdir $S3
+ENV BUCKET=$bucket
+ENV BUCKET_PATH=$bucket_path
 
 # copy code, model, settings and norm_consts
-COPY data/* /root/
+COPY data/ /root/
+
+# TODO vyresit toto (bezpecnost)?
 RUN mv credentials ~/.passwd-s3fs
 RUN chmod 600 ~/.passwd-s3fs
 
-WORKDIR /src
+WORKDIR src/
 
 COPY entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
