--- a/julia-custom/Dockerfile
+++ b/julia-custom/Dockerfile
@@ -45,10 +45,12 @@ WORKDIR /opt
 # download compiled julia
 # julia 1.0.1
 # RUN curl "https://julialang-s3.julialang.org/bin/linux/x64/1.0/julia-1.0.1-linux-x86_64.tar.gz" -o julia.tar.gz
+# RUN tar -xf julia.tar.gz && rm julia.tar.gz
+# RUN ln -s /opt/julia-1.0.1/bin/julia /usr/local/bin/julia
 # julia 0.7
 RUN curl "https://julialang-s3.julialang.org/bin/linux/x64/0.7/julia-0.7.0-linux-x86_64.tar.gz" -o julia.tar.gz
 RUN tar -xf julia.tar.gz && rm julia.tar.gz
-RUN ln -s /opt/julia-1.0.1/bin/julia /usr/local/bin/julia
+RUN ln -s /opt/julia-0.7/bin/julia /usr/local/bin/julia
 
 # build s3fs
 RUN git clone https://github.com/s3fs-fuse/s3fs-fuse.git
